syntax = "proto3";

package database;

import "game.proto";

enum QueryType {
    GetItemById = 0;
    GetCreatureMovementByGuid = 1;
    GetCreatureGroupingByMemberGuid = 2;
    GetCreatureTemplateById = 3;
    GetCreaturesById = 4;
    GetCreaturesByMapId = 5;
    GetCreatureEquipTemplateById = 6;
}

message DatabaseRequest {
    QueryType queryType = 1;
    string queryParam1 = 2;
    string queryParam2 = 3;
    string queryParam3 = 4;
    string queryParam4 = 5;
}

message DatabaseResponse {
    repeated AreaTriggerTeleport areaTriggerTeleports = 1;
    repeated CreatureGrouping creatureGroupings = 2;
    repeated CreatureMovement creatureMovement = 3;
    repeated CreatureMovementTemplate creatureMovementTemplate = 4;
    repeated GameObject gameObjects = 5;
    repeated Creature creatures = 6;
    optional CreatureEquipTemplate creatureEquipTemplate = 7;
    optional ItemTemplate itemTemplate = 8;
    optional NpcVendorEntry npcVendorEntry = 9;
    optional QuestTemplate questTemplate = 10;
    optional CreatureTemplate creatureTemplate = 11;
}

message AreaTriggerTeleport {
    int32 id = 1;
    string name = 2;
    uint32 requiredLevel = 3;
    int32 requiredItem = 4;
    int32 requiredItem2 = 5;
    int32 requiredQuestDone = 6;
    uint32 targetMap = 7;
    game.Position position = 8;
    float targetOrientation = 9;
    string statusFailedText = 10;
    int32 conditionId = 11;
}

message Creature {
    int64 guid = 1;  // Consistent ID type
    string name = 2;
    int32 id = 3;
    int32 map = 4;
    int32 zoneId = 5;
    int32 areaId = 6;
    game.Position position = 7;
    float orientation = 8;
    int32 spawnTimeSecsMin = 9;
    int32 spawnTimeSecsMax = 10;
    float spawnDist = 11;
    int32 currentWaypointId = 12;
    int32 spawnType = 13;
    int32 respawnTime = 14;
    int32 movementType = 15;
    int32 wanderDistance = 16;
    int32 searchRange = 17;
    int32 equipmentId = 18;
    string scriptName = 19;
    string comments = 20;
    int32 spawnMask = 21;
    int32 modelId = 22;
    int32 currentWaypoint = 23;
    int32 curHealth = 24;
    int32 curMana = 25;
    int32 deathState = 26;
}

message CreatureEquipTemplate {
    int32 entry = 1;
    int32 equipEntry1 = 2;
    int32 equipEntry2 = 3;
    int32 equipEntry3 = 4;
}

message CreatureGrouping {
    int64 leaderGuid = 1;  // Consistent ID type
    int64 memberGuid = 2;  // Consistent ID type
}

message CreatureMovement {
    int32 id = 1;
    int32 point = 2;
    game.Position position = 3;
    float orientation = 4;
    int32 waitTime = 5;
    int32 scriptId = 6;
    string comment = 7;
}

message CreatureMovementTemplate {
    int32 entry = 1;
    int32 pathId = 2;
    int32 point = 3;
    game.Position position = 4;
    float orientation = 5;
    int32 waitTime = 6;
    int32 scriptId = 7;
    string comment = 8;
}

message CreatureTemplate {
    int64 entry = 1;
    string name = 2;
    string subName = 3;
    uint32 minLevel = 4;
    uint32 maxLevel = 5;
    int32 modelId1 = 6;
    int32 modelId2 = 7;
    int32 modelId3 = 8;
    int32 modelId4 = 9;
    int32 faction = 10;
    float scale = 11;
    uint32 family = 12;
    uint32 creatureType = 13;
    uint32 inhabitType = 14;
    uint32 regenerateStats = 15;
    uint32 racialLeader = 16;
    int32 npcFlags = 17;
    int32 unitFlags = 18;
    int32 dynamicFlags = 19;
    int32 extraFlags = 20;
    int32 creatureTypeFlags = 21;
    float speedWalk = 22;
    float speedRun = 23;
    int32 detection = 24;
    int32 callForHelp = 25;
    int32 pursuit = 26;
    int32 leash = 27;
    int32 timeout = 28;
    uint32 unitClass = 29;
    uint32 rank = 30;
    float healthMultiplier = 31;
    float powerMultiplier = 32;
    float damageMultiplier = 33;
    float damageVariance = 34;
    float armorMultiplier = 35;
    float experienceMultiplier = 36;
    int32 minLevelHealth = 37;
    int32 maxLevelHealth = 38;
    int32 minLevelMana = 39;
    int32 maxLevelMana = 40;
    float minMeleeDmg = 41;
    float maxMeleeDmg = 42;
    float minRangedDmg = 43;
    float maxRangedDmg = 44;
    int32 armor = 45;
    int32 meleeAttackPower = 46;
    int32 rangedAttackPower = 47;
    int32 meleeBaseAttackTime = 48;
    int32 rangedBaseAttackTime = 49;
    uint32 damageSchool = 50;
    int32 minLootGold = 51;
    int32 maxLootGold = 52;
    int32 lootId = 53;
    int32 pickpocketLootId = 54;
    int32 skinningLootId = 55;
    int32 killCredit1 = 56;
    int32 killCredit2 = 57;
    int32 mechanicImmuneMask = 58;
    int32 schoolImmuneMask = 59;
    map<uint32, uint32> resistances = 60;  // Reused Resistances
    int32 petSpellDataId = 66;
    uint32 movementType = 67;
    uint32 trainerType = 68;
    int32 trainerSpell = 69;
    uint32 trainerClass = 70;
    uint32 trainerRace = 71;
    int32 trainerTemplateId = 72;
    int32 vendorTemplateId = 73;
    int32 gossipMenuId = 74;
    int32 interactionPauseTimer = 75;
    uint32 visibilityDistanceType = 76;
    int32 corpseDecay = 77;
    int32 spellList = 78;
    int32 equipmentTemplateId = 79;
    uint32 civilian = 80;
    string aiName = 81;
    string scriptName = 82;
}

message GameObject {
    int64 guid = 1;  // Consistent ID type
    int32 id = 2;
    int32 map = 3;
    uint32 spawnMask = 4;
    game.Position position = 5;
    float orientation = 6;
    float rotation0 = 7;
    float rotation1 = 8;
    float rotation2 = 9;
    float rotation3 = 10;
    int32 spawnTimeSecsMin = 11;
    int32 spawnTimeSecsMax = 12;
    uint32 animProgress = 13;
    uint32 state = 14;
}

message ItemTemplate {
    int32 entry = 1;
    int32 patch = 2;
    int32 class = 3;
    int32 subclass = 4;
    string name = 5;
    int32 displayId = 6;
    int32 quality = 7;
    int32 flags = 8;
    int32 buyCount = 9;
    int32 buyPrice = 10;
    int32 sellPrice = 11;
    int32 inventoryType = 12;
    int32 allowableClass = 13;
    int32 allowableRace = 14;
    int32 itemLevel = 15;
    int32 requiredLevel = 16;
    int32 requiredSkill = 17;
    int32 requiredSkillRank = 18;
    int32 requiredSpell = 19;
    int32 requiredHonorRank = 20;
    int32 requiredCityRank = 21;
    int32 requiredReputationFaction = 22;
    int32 requiredReputationRank = 23;
    int32 maxCount = 24;
    int32 stackable = 25;
    int32 containerSlots = 26;
    map<uint32, uint32> stats = 27;  // Reused Stat instead of individual statType/statValue fields
    float dmgMin1 = 47;
    float dmgMax1 = 48;
    int32 dmgType1 = 49;
    float dmgMin2 = 50;
    float dmgMax2 = 51;
    int32 dmgType2 = 52;
    float dmgMin3 = 53;
    float dmgMax3 = 54;
    int32 dmgType3 = 55;
    float dmgMin4 = 56;
    float dmgMax4 = 57;
    int32 dmgType4 = 58;
    float dmgMin5 = 59;
    float dmgMax5 = 60;
    int32 dmgType5 = 61;
    int32 armor = 62;
    map<uint32, uint32> resistances = 63;  // Reused Resistances
    int32 delay = 69;
    int32 ammoType = 70;
    float rangedModRange = 71;
    int32 spellId1 = 72;
    int32 spellTrigger1 = 73;
    int32 spellCharges1 = 74;
    float spellPpmRate1 = 75;
    int32 spellCooldown1 = 76;
    int32 spellCategory1 = 77;
    int32 spellCategoryCooldown1 = 78;
    int32 spellId2 = 79;
    int32 spellTrigger2 = 80;
    int32 spellCharges2 = 81;
    float spellPpmRate2 = 82;
    int32 spellCooldown2 = 83;
    int32 spellCategory2 = 84;
    int32 spellCategoryCooldown2 = 85;
    int32 spellId3 = 86;
    int32 spellTrigger3 = 87;
    int32 spellCharges3 = 88;
    float spellPpmRate3 = 89;
    int32 spellCooldown3 = 90;
    int32 spellCategory3 = 91;
    int32 spellCategoryCooldown3 = 92;
    int32 spellId4 = 93;
    int32 spellTrigger4 = 94;
    int32 spellCharges4 = 95;
    float spellPpmRate4 = 96;
    int32 spellCooldown4 = 97;
    int32 spellCategory4 = 98;
    int32 spellCategoryCooldown4 = 99;
    int32 spellId5 = 100;
    int32 spellTrigger5 = 101;
    int32 spellCharges5 = 102;
    float spellPpmRate5 = 103;
    int32 spellCooldown5 = 104;
    int32 spellCategory5 = 105;
    int32 spellCategoryCooldown5 = 106;
    int32 bonding = 107;
    string description = 108;
    int32 pageText = 109;
    int32 languageID = 110;
    int32 pageMaterial = 111;
    int32 startQuest = 112;
    int32 lockId = 113;
    int32 material = 114;
    int32 sheath = 115;
    int32 randomProperty = 116;
    int32 block = 117;
    int32 itemSet = 118;
    int32 maxDurability = 119;
    int32 area = 120;
    int32 map = 121;
    int32 bagFamily = 122;
    string scriptName = 123;
    int32 disenchantID = 124;
    int32 foodType = 125;
    int32 minMoneyLoot = 126;
    int32 maxMoneyLoot = 127;
    int32 duration = 128;
    int32 extraFlags = 129;
    int32 otherTeamEntry = 130;
}

message NpcVendorEntry {
    int32 entry = 1;
    int32 item = 2;
    int32 maxCount = 3;
    int32 incrTime = 4;
    int32 slot = 5;
    int32 conditionId = 6;
    string comments = 7;
}

message QuestTemplate {
    int32 entry = 1;
    int32 method = 2;
    int32 zoneOrSort = 3;
    int32 minLevel = 4;
    int32 maxLevel = 5;
    int32 questLevel = 6;
    int32 type = 7;
    int32 requiredClasses = 8;
    int32 requiredRaces = 9;
    int32 requiredSkill = 10;
    int32 requiredSkillValue = 11;
    int32 requiredCondition = 12;
    int32 repObjectiveFaction = 13;
    int32 repObjectiveValue = 14;
    int32 requiredMinRepFaction = 15;
    int32 requiredMinRepValue = 16;
    int32 requiredMaxRepFaction = 17;
    int32 requiredMaxRepValue = 18;
    int32 suggestedPlayers = 19;
    int32 limitTime = 20;
    int32 questFlags = 21;
    int32 specialFlags = 22;
    int32 prevQuestId = 23;
    int32 nextQuestId = 24;
    int32 exclusiveGroup = 25;
    int32 breadcrumbForQuestId = 26;
    int32 nextQuestInChain = 27;
    int32 srcItemId = 28;
    int32 srcItemCount = 29;
    int32 srcSpell = 30;
    string title = 31;
    string details = 32;
    string objectives = 33;
    string offerRewardText = 34;
    string requestItemsText = 35;
    string endText = 36;
    string objectiveText1 = 37;
    string objectiveText2 = 38;
    string objectiveText3 = 39;
    string objectiveText4 = 40;
    
    // Keeping the unique identifiers and counts
    int32 reqItemId1 = 41;
    int32 reqItemId2 = 42;
    int32 reqItemId3 = 43;
    int32 reqItemId4 = 44;
    int32 reqItemCount1 = 45;
    int32 reqItemCount2 = 46;
    int32 reqItemCount3 = 47;
    int32 reqItemCount4 = 48;
    
    int32 reqSourceId1 = 49;
    int32 reqSourceId2 = 50;
    int32 reqSourceId3 = 51;
    int32 reqSourceId4 = 52;
    int32 reqSourceCount1 = 53;
    int32 reqSourceCount2 = 54;
    int32 reqSourceCount3 = 55;
    int32 reqSourceCount4 = 56;
    
    int32 reqCreatureOrGOId1 = 57;
    int32 reqCreatureOrGOId2 = 58;
    int32 reqCreatureOrGOId3 = 59;
    int32 reqCreatureOrGOId4 = 60;
    int32 reqCreatureOrGOCount1 = 61;
    int32 reqCreatureOrGOCount2 = 62;
    int32 reqCreatureOrGOCount3 = 63;
    int32 reqCreatureOrGOCount4 = 64;
    
    int32 reqSpellCast1 = 65;
    int32 reqSpellCast2 = 66;
    int32 reqSpellCast3 = 67;
    int32 reqSpellCast4 = 68;
    
    int32 rawChoiceItemId1 = 69;
    int32 rawChoiceItemId2 = 70;
    int32 rawChoiceItemId3 = 71;
    int32 rawChoiceItemId4 = 72;
    int32 rawChoiceItemId5 = 73;
    int32 rawChoiceItemId6 = 74;
    int32 rawChoiceItemCount1 = 75;
    int32 rawChoiceItemCount2 = 76;
    int32 rawChoiceItemCount3 = 77;
    int32 rawChoiceItemCount4 = 78;
    int32 rawChoiceItemCount5 = 79;
    int32 rawChoiceItemCount6 = 80;
    
    int32 rawItemId1 = 81;
    int32 rawItemId2 = 82;
    int32 rawItemId3 = 83;
    int32 rawItemId4 = 84;
    int32 rawItemCount1 = 85;
    int32 rawItemCount2 = 86;
    int32 rawItemCount3 = 87;
    int32 rawItemCount4 = 88;
    
    int32 rawRepFaction1 = 89;
    int32 rawRepFaction2 = 90;
    int32 rawRepFaction3 = 91;
    int32 rawRepFaction4 = 92;
    int32 rawRepFaction5 = 93;
    int32 rawRepValue1 = 94;
    int32 rawRepValue2 = 95;
    int32 rawRepValue3 = 96;
    int32 rawRepValue4 = 97;
    int32 rawRepValue5 = 98;
    
    int32 rawOrReqMoney = 99;
    uint32 rawMoneyMaxLevel = 100;
    int32 rawSpell = 101;
    int32 rawSpellCast = 102;
    int32 rawMailTemplateId = 103;
    uint32 rawMailDelaySecs = 104;
    int32 pointMapId = 105;
    float pointX = 106;
    float pointY = 107;
    uint32 pointOpt = 108;
    
    int32 detailsEmote1 = 109;
    int32 detailsEmote2 = 110;
    int32 detailsEmote3 = 111;
    int32 detailsEmote4 = 112;
    int32 detailsEmoteDelay1 = 113;
    int32 detailsEmoteDelay2 = 114;
    int32 detailsEmoteDelay3 = 115;
    int32 detailsEmoteDelay4 = 116;
    
    int32 incompleteEmote = 117;
    int32 incompleteEmoteDelay = 118;
    int32 completeEmote = 119;
    int32 completeEmoteDelay = 120;
    
    int32 offerRewardEmote1 = 121;
    int32 offerRewardEmote2 = 122;
    int32 offerRewardEmote3 = 123;
    int32 offerRewardEmote4 = 124;
    int32 offerRewardEmoteDelay1 = 125;
    int32 offerRewardEmoteDelay2 = 126;
    int32 offerRewardEmoteDelay3 = 127;
    int32 offerRewardEmoteDelay4 = 128;
    
    int32 startScript = 129;
    int32 completeScript = 130;
}
